--- a/thanks-fes-web/src/app/app.component.scss
+++ b/thanks-fes-web/src/app/app.component.scss
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  background-image: url("/assets/images/common/bg.jpeg");
+  background-image: url("/assets/images/bg.jpeg");
   background-size: cover;
   @extend .text-primary;
 }
