--- a/thanks-fes-web/src/app/components/pages/panelist/panelist.component.html
+++ b/thanks-fes-web/src/app/components/pages/panelist/panelist.component.html
@@ -94,7 +94,7 @@
     </div>
 
     <div
-      *ngIf="question.panelistType === '個人'"
+      *ngIf="period.panelistType === '個人'"
       class="w-100"
       [ngClass]="
         question.questionFormat === '画像'
